# theatre-qt

./: .gitignore  CMakeLists.txt  TODO  Theatre_Qt.pro  Theatre_Qt.pro.user.e081ffb  Theatre_Qt.pro.user.ecff0ca  main.cpp
dialogs/: TDCheck.cpp  TDCheck.h  TDLogin.cpp  TDLogin.h
res/: qss.qss  res.qrc  res.rc
templates/: TCreate.cpp  TCreate.h  TEdit.cpp  TEdit.h  TTModel.cpp  TTModel.h  TTModels.cpp  TTModels.h
utils/: TCheckBox.cpp  TCheckBox.h  TComboBox.cpp  TComboBox.h  TConfig.cpp  TConfig.h  TDB.cpp  TDB.h  TFileUpload.cpp  TFileUpload.h  TListBox.cpp  TListBox.h
windows/: TBooking.cpp  TBooking.h  TChoose.cpp  TChoose.h  TComments.cpp  TComments.h  TLogin.cpp  TLogin.h  TMainMenu.cpp  TMainMenu.h  TMainWindow.cpp  TMainWindow.h  TModel.cpp  TModel.h  TReviews.cpp  TReviews.h  TStatistics.cpp  TStatistics.h  TUser.cpp  TUser.h  actor.cpp  actor.h  actors.cpp  actors.h  create1theatre.cpp  create1theatre.h  create_actor.cpp  create_actor.h  create_t.h  create_theatre.cpp  create_theatre.h  edit1theatre.cpp  edit1theatre.h  edit_theatre.cpp  edit_theatre.h  theatre.cpp  theatre.h  theatres.cpp  theatres.h
windows/actor/: TActor.cpp  TActor.h  TActorCreate.cpp  TActorCreate.h  TActorEdit.cpp  TActorEdit.h  TActors.cpp  TActors.h
windows/article/: TArticle.cpp  TArticle.h  TArticleCreate.cpp  TArticleCreate.h  TArticleEdit.cpp  TArticleEdit.h  TArticles.cpp  TArticles.h
windows/del/: TDeleted.cpp  TDeleted.h  TDeletedTab.cpp  TDeletedTab.h
windows/hall/: THall.cpp  THall.h  THallCreate.cpp  THallCreate.h  THallEdit.cpp  THallEdit.h  THallPreview.cpp  THallPreview.h  THalls.cpp  THalls.h
windows/hall/draw/: THall.cpp  THall.h  THallCanvas.cpp  THallCanvas.h  THallTools.cpp  THallTools.h
windows/perf/: TPerf.cpp  TPerf.h  TPerfApprove.cpp  TPerfApprove.h  TPerfCreate.cpp  TPerfCreate.h  TPerfEdit.cpp  TPerfEdit.h  TPerfs.cpp  TPerfs.h
windows/poster/: TPoster.cpp  TPoster.h  TPosterCreate.cpp  TPosterCreate.h  TPosterEdit.cpp  TPosterEdit.h  TPosters.cpp  TPosters.h
windows/price/: TPriceCreate.cpp  TPriceCreate.h  TPriceDialog.cpp  TPriceDialog.h  TPriceEdit.cpp  TPriceEdit.h  TPricePreview.cpp  TPricePreview.h  TPrices.cpp  TPrices.h
windows/price/draw/: THallPrice.cpp  THallPrice.h  THallPriceCanvas.cpp  THallPriceCanvas.h  THallPriceTools.cpp  THallPriceTools.h
windows/settings/: TWSettings.cpp  TWSettings.h
windows/theatre/: TTheatre.cpp  TTheatre.h  TTheatreCreate.cpp  TTheatreCreate.h  TTheatreEdit.cpp  TTheatreEdit.h  TTheatres.cpp  TTheatres.h
windows/user/: TUser.cpp  TUser.h  TUserCreate.cpp  TUserCreate.h  TUserEdit.cpp  TUserEdit.h  TUsers.cpp  TUsers.h
